chore: update repo
update version to 2.8.5-1

Issue: https://github.com/linuxdeepin/developer-center/issues/5731
Log: update repo

--- a/debian/control
+++ b/debian/control
@@ -14,11 +14,11 @@ Build-Depends: debhelper (>= 10),
  libghc-hunit-prof,
  libghc-quickcheck2-dev (>= 2.13.1),
  libghc-quickcheck2-prof,
- libghc-ansi-terminal-dev (>= 0.5),
+ libghc-ansi-terminal-dev (>= 0.6.2),
  libghc-ansi-terminal-prof,
  libghc-call-stack-dev,
  libghc-call-stack-prof,
- libghc-clock-dev,
+ libghc-clock-dev (>= 0.7.1),
  libghc-clock-prof,
  libghc-hspec-expectations-dev (>= 0.8.2),
  libghc-hspec-expectations-dev (<< 0.8.3),
