--- a/hspec-core.cabal
+++ b/hspec-core.cabal
@@ -1,20 +1,21 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 82bf612e65db816a15de01c4c432597ef4492ceeb81f46063dcdd57b74ec523a
 
 name:             hspec-core
-version:          2.7.1
+version:          2.8.5
 license:          MIT
 license-file:     LICENSE
-copyright:        (c) 2011-2019 Simon Hengel,
+copyright:        (c) 2011-2021 Simon Hengel,
                   (c) 2011-2012 Trystan Spangler,
                   (c) 2011 Greg Weber
 maintainer:       Simon Hengel <sol@typeful.net>
 build-type:       Simple
+extra-source-files:
+    version.yaml
+    help.txt
 category:         Testing
 stability:        experimental
 bug-reports:      https://github.com/hspec/hspec/issues
@@ -31,15 +32,15 @@ library
   hs-source-dirs:
       src
       vendor
-  ghc-options: -Wall
+  ghc-options: -Wall -fno-warn-incomplete-uni-patterns
   build-depends:
       HUnit ==1.6.*
     , QuickCheck >=2.13.1
-    , ansi-terminal >=0.5
+    , ansi-terminal >=0.6.2
     , array
     , base >=4.5.0.0 && <5
     , call-stack
-    , clock
+    , clock >=0.7.1
     , deepseq
     , directory
     , filepath
@@ -54,25 +55,34 @@ library
       Test.Hspec.Core.Spec
       Test.Hspec.Core.Hooks
       Test.Hspec.Core.Runner
+      Test.Hspec.Core.Format
       Test.Hspec.Core.Formatters
+      Test.Hspec.Core.Formatters.V1
+      Test.Hspec.Core.Formatters.V2
       Test.Hspec.Core.QuickCheck
       Test.Hspec.Core.Util
   other-modules:
+      GetOpt.Declarative
+      GetOpt.Declarative.Environment
+      GetOpt.Declarative.Interpret
+      GetOpt.Declarative.Types
+      GetOpt.Declarative.Util
       Test.Hspec.Core.Clock
       Test.Hspec.Core.Compat
       Test.Hspec.Core.Config
+      Test.Hspec.Core.Config.Definition
       Test.Hspec.Core.Config.Options
-      Test.Hspec.Core.Config.Util
       Test.Hspec.Core.Example
       Test.Hspec.Core.Example.Location
       Test.Hspec.Core.FailureReport
-      Test.Hspec.Core.Format
       Test.Hspec.Core.Formatters.Diff
       Test.Hspec.Core.Formatters.Free
       Test.Hspec.Core.Formatters.Internal
       Test.Hspec.Core.Formatters.Monad
       Test.Hspec.Core.QuickCheckUtil
       Test.Hspec.Core.Runner.Eval
+      Test.Hspec.Core.Runner.PrintSlowSpecItems
+      Test.Hspec.Core.Shuffle
       Test.Hspec.Core.Spec.Monad
       Test.Hspec.Core.Timer
       Test.Hspec.Core.Tree
@@ -88,21 +98,22 @@ test-suite spec
       src
       vendor
       test
-  ghc-options: -Wall
+  ghc-options: -Wall -fno-warn-incomplete-uni-patterns
   cpp-options: -DTEST
   build-depends:
       HUnit ==1.6.*
-    , QuickCheck >=2.13.1
-    , ansi-terminal >=0.5
+    , QuickCheck >=2.14
+    , ansi-terminal >=0.6.2
     , array
     , base >=4.5.0.0 && <5
+    , base-orphans
     , call-stack
-    , clock
+    , clock >=0.7.1
     , deepseq
     , directory
     , filepath
     , hspec-expectations ==0.8.2.*
-    , hspec-meta >=2.3.2
+    , hspec-meta ==2.7.8
     , process
     , quickcheck-io >=0.2.0
     , random
@@ -115,11 +126,16 @@ test-suite spec
   build-tool-depends:
       hspec-meta:hspec-meta-discover
   other-modules:
+      GetOpt.Declarative
+      GetOpt.Declarative.Environment
+      GetOpt.Declarative.Interpret
+      GetOpt.Declarative.Types
+      GetOpt.Declarative.Util
       Test.Hspec.Core.Clock
       Test.Hspec.Core.Compat
       Test.Hspec.Core.Config
+      Test.Hspec.Core.Config.Definition
       Test.Hspec.Core.Config.Options
-      Test.Hspec.Core.Config.Util
       Test.Hspec.Core.Example
       Test.Hspec.Core.Example.Location
       Test.Hspec.Core.FailureReport
@@ -129,11 +145,15 @@ test-suite spec
       Test.Hspec.Core.Formatters.Free
       Test.Hspec.Core.Formatters.Internal
       Test.Hspec.Core.Formatters.Monad
+      Test.Hspec.Core.Formatters.V1
+      Test.Hspec.Core.Formatters.V2
       Test.Hspec.Core.Hooks
       Test.Hspec.Core.QuickCheck
       Test.Hspec.Core.QuickCheckUtil
       Test.Hspec.Core.Runner
       Test.Hspec.Core.Runner.Eval
+      Test.Hspec.Core.Runner.PrintSlowSpecItems
+      Test.Hspec.Core.Shuffle
       Test.Hspec.Core.Spec
       Test.Hspec.Core.Spec.Monad
       Test.Hspec.Core.Timer
@@ -142,22 +162,29 @@ test-suite spec
       Control.Concurrent.Async
       Data.Algorithm.Diff
       All
+      GetOpt.Declarative.EnvironmentSpec
+      GetOpt.Declarative.UtilSpec
       Helper
       Mock
       Test.Hspec.Core.ClockSpec
       Test.Hspec.Core.CompatSpec
+      Test.Hspec.Core.Config.DefinitionSpec
       Test.Hspec.Core.Config.OptionsSpec
-      Test.Hspec.Core.Config.UtilSpec
       Test.Hspec.Core.ConfigSpec
       Test.Hspec.Core.Example.LocationSpec
       Test.Hspec.Core.ExampleSpec
       Test.Hspec.Core.FailureReportSpec
+      Test.Hspec.Core.FormatSpec
       Test.Hspec.Core.Formatters.DiffSpec
-      Test.Hspec.Core.FormattersSpec
+      Test.Hspec.Core.Formatters.InternalSpec
+      Test.Hspec.Core.Formatters.V1Spec
+      Test.Hspec.Core.Formatters.V2Spec
       Test.Hspec.Core.HooksSpec
       Test.Hspec.Core.QuickCheckUtilSpec
       Test.Hspec.Core.Runner.EvalSpec
+      Test.Hspec.Core.Runner.PrintSlowSpecItemsSpec
       Test.Hspec.Core.RunnerSpec
+      Test.Hspec.Core.ShuffleSpec
       Test.Hspec.Core.SpecSpec
       Test.Hspec.Core.TimerSpec
       Test.Hspec.Core.UtilSpec
